Ajout du partie pour la responsive

--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
                         <i class='bx bxs-briefcase'></i>
                         <span>+20</span>
                     </div>
-                    <p class="p2">Coachs</p>
+                    <p class="p2"><span>Coachs</span></p>
                 </div>
                 <div class="nombre">
                     <div class="evolu">
                         <i class='bx bxs-like'></i>
                         <span>+90%</span>
                     </div>
-                    <p class="p3">Taux de réussite</p>
+                    <p class="p3"><span>Taux de réussite</span></p>
                 </div>
             </div>
         </section>
