Le Responsive pour la max-width: 900

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <i class='bx bx-group'></i>
                         <span>+2000</span>
                     </div>
-                    <p class="p1">Etudiants Formés</p>
+                    <p class="p1"><span>Etudiants Formés</span></p>
                 </div>
                 <div class="nombre">
                     <div class="evolu">
